--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -12,36 +12,23 @@
         <form id="jobForm">
             <table class="header-table" style="width: 100%; border-collapse: collapse; table-layout: fixed;">
                 <tr>
-                    <!-- ช่องซ้าย -->
-                    <td
-                        style="width: 25%; vertical-align: middle; padding: 10px; border: 1px solid #000; text-align:center;">
-                        <h4 style="margin: 0 0 6px 0;">ใบสมัครงาน</h4>
-                        <div style="font-size: 12px; margin-bottom: 6px;">วันที่สมัคร</div>
-
-                        <input type="text" id="current_date" name="วันที่สมัครงาน" class="input-line"
-                            style="width: 140px; font-size: 14px; display:block; margin: 0 auto; text-align:center;"
-                            placeholder="DD/MM/YYYY">
+                    <!-- โลโก้ 1 -->
+                    <td class="hdr-logo" style="border: 1px solid #000;">
+                        <img src="./logo-tera.png" class="logo tera" alt="TERA">
+                        <label class="chk-wrap"><input type="checkbox" name="company_tera" value="YES"></label>
                     </td>
 
-                    <!-- โลโก้ 1 -->
-<td class="hdr-logo" style="border: 1px solid #000;">
-  <img src="./logo-tera.png" class="logo tera" alt="TERA">
-  <label class="chk-wrap"><input type="checkbox" name="company_tera" value="YES"></label>
-</td>
+                    <!-- โลโก้ 2 -->
+                    <td class="hdr-logo" style="border: 1px solid #000;">
+                        <img src="./electric.png" class="logo electric" alt="TERA ELECTRIC">
+                        <label class="chk-wrap"><input type="checkbox" name="company_electric" value="YES"></label>
+                    </td>
 
-<!-- โลโก้ 2 -->
-<td class="hdr-logo" style="border: 1px solid #000;">
-  <img src="./electric.png" class="logo electric" alt="TERA ELECTRIC">
-  <label class="chk-wrap"><input type="checkbox" name="company_electric" value="YES"></label>
-</td>
-
-<!-- โลโก้ 3 -->
-<td class="hdr-logo" style="border: 1px solid #000;">
-  <img src="./power.png" class="logo power" alt="TERA POWER">
-  <label class="chk-wrap"><input type="checkbox" name="company_power" value="YES"></label>
-</td>
-
-
+                    <!-- โลโก้ 3 -->
+                    <td class="hdr-logo" style="border: 1px solid #000;">
+                        <img src="./power.png" class="logo power" alt="TERA POWER">
+                        <label class="chk-wrap"><input type="checkbox" name="company_power" value="YES"></label>
+                    </td>
 
                 </tr>
             </table>
@@ -918,6 +905,5 @@
         }
     </script>
 </body>
-
 
 </html>
